homework-12/files/auth-k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: homework-12
  labels:
    app: auth-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: christinagorina/auth-homework-12:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: homework-12
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 80
      name: http
      targetPort: http
